# autocompose

./: .env.example  .gitignore  CLAUDE.md  README.md  create_test_midi.py  demo_mcp.py  mcp_server_test.py  pyproject.toml  requirements.txt  run_mcp_server.py  run_mcp_session.py  simple.py  test_api.py  test_composition.py  test_electronic.py  test_hiphop.py  test_http_client.py  test_multi_midi.py  test_output.mid  test_request.py  test_rnb.py  test_rnb_output.json  test_root.py  test_server.py  test_simple.py
app/: main.py
app/api/routes/: __init__.py  generate.py
app/mcp/: __init__.py  client.py  prompts.py  resources.py  server.py  tools.py
app/services/: llm.py
