[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocompose"
version = "0.1.0"
description = "A system for AI-generated music"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "AutoCompose Team"}
]
dependencies = [
    "anthropic",
    "fastapi",
    "mcp[cli]",
    "mido",
    "uvicorn",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
